# aigov

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
brains/: __init__.py  base.py  common.py
brains/api/: README.md  __init__.py  adapter.py  exporter.py
brains/claude_code/: __init__.py  exporter.py  runner.py
brains/openclaw/: README.md  __init__.py  adapter.py  exporter.py
core/: __init__.py  cli.py  config.py  review.py  session.py
core/archive/: __init__.py  store.py
core/contracts/: __init__.py  export.py  models.py
core/ingest/: __init__.py  crisis.py  opendata.py  rss.py  scraper_base.py
core/publish/: __init__.py  health.py  publisher.py
core/queue/: __init__.py  filequeue.py
deploy/: Caddyfile  README.md  aigov-ingest.service  aigov-ingest.timer  aigov-session.service  aigov-session.timer  install.sh  run-ingest.sh  run-session.sh
ministries/_template/: ministry.yaml
ministries/agriculture/: ministry.yaml
ministries/culture/: ministry.yaml
ministries/defense/: ministry.yaml
ministries/economy/: ministry.yaml
published/: index.json
site/: astro.config.mjs  build.sh  package-lock.json  package.json
tests/: fake_brain.py  test_archive.py  test_brain_skeletons.py  test_claude_brain.py  test_cli.py  test_contracts.py  test_corrections.py  test_e2e.py  test_e2e_all_types.py  test_export.py  test_failures.py  test_ingest.py  test_ministries.py  test_observability.py  test_publish.py  test_queue.py  test_review.py  test_session_routing.py  test_task_types.py  test_triggers_health.py
(+57 files in other folders)
