[project]
name = "aigov"
version = "0.1.0"
description = "aigov.bg — AI e-government of Bulgaria: ministries as AI agents publishing public analyses and reports"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Martin Enev" }]
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "feedparser>=6.0",
    "polars>=1.0",
    "python-frontmatter>=1.1",
    "duckdb>=1.5.4",
]

[project.scripts]
aigov = "core.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "brains"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# strict for core/ (per CLAUDE.md quality rules)
[[tool.mypy.overrides]]
module = "core.*"
strict = true

# feedparser ships no type stubs
[[tool.mypy.overrides]]
module = "feedparser.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
